Fix dropdown cut off overflow

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
+  /* overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 0px; /* Place content 60px from the top */
 }
 
@@ -21,6 +21,7 @@
   align-items: center;
 }
 .content {
+  z-index: 0;
   margin-left: 60px;
 }
 
@@ -49,7 +50,7 @@
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
-  display: inline-block;
+  display: block;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -59,7 +60,7 @@
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: -1;
+  z-index: 3;
 }
 
 /* Links inside the dropdown */
